real/algorithms/nclusterbox_no_performance_imp/output.txt
g++ -g -Og -Wall -Wextra -Weffc++ -pedantic -Wno-unused-parameter -c -o src/utilities/DataFormatException.o src/utilities/DataFormatException.cpp
g++ -g -Og -Wall -Wextra -Weffc++ -pedantic -Wno-unused-parameter -c -o src/utilities/NoInputException.o src/utilities/NoInputException.cpp
g++ -g -Og -Wall -Wextra -Weffc++ -pedantic -Wno-unused-parameter -c -o src/utilities/NoOutputException.o src/utilities/NoOutputException.cpp
g++ -g -Og -Wall -Wextra -Weffc++ -pedantic -Wno-unused-parameter -c -o src/utilities/UsageException.o src/utilities/UsageException.cpp
g++ -g -Og -Wall -Wextra -Weffc++ -pedantic -Wno-unused-parameter -c -o src/core/AbstractData.o src/core/AbstractData.cpp
g++ -g -Og -Wall -Wextra -Weffc++ -pedantic -Wno-unused-parameter -c -o src/core/AbstractDataWithPrediction.o src/core/AbstractDataWithPrediction.cpp
g++ -g -Og -Wall -Wextra -Weffc++ -pedantic -Wno-unused-parameter -c -o src/core/AbstractRoughTensor.o src/core/AbstractRoughTensor.cpp
g++ -g -Og -Wall -Wextra -Weffc++ -pedantic -Wno-unused-parameter -c -o src/core/AbstractShift.o src/core/AbstractShift.cpp
g++ -g -Og -Wall -Wextra -Weffc++ -pedantic -Wno-unused-parameter -c -o src/core/BestPatterns.o src/core/BestPatterns.cpp
g++ -g -Og -Wall -Wextra -Weffc++ -pedantic -Wno-unused-parameter -c -o src/core/CandidateVariable.o src/core/CandidateVariable.cpp
g++ -g -Og -Wall -Wextra -Weffc++ -pedantic -Wno-unused-parameter -c -o src/core/ConcurrentPatternPool.o src/core/ConcurrentPatternPool.cpp
g++ -g -Og -Wall -Wextra -Weffc++ -pedantic -Wno-unused-parameter -c -o src/core/ConstantShift.o src/core/ConstantShift.cpp
g++ -g -Og -Wall -Wextra -Weffc++ -pedantic -Wno-unused-parameter -c -o src/core/DenseCrispTube.o src/core/DenseCrispTube.cpp
g++ -g -Og -Wall -Wextra -Weffc++ -pedantic -Wno-unused-parameter -c -o src/core/DenseFuzzyTube.o src/core/DenseFuzzyTube.cpp
g++ -g -Og -Wall -Wextra -Weffc++ -pedantic -Wno-unused-parameter -c -o src/core/DenseRoughTensor.o src/core/DenseRoughTensor.cpp
g++ -g -Og -Wall -Wextra -Weffc++ -pedantic -Wno-unused-parameter -c -o src/core/ExpectationShift.o src/core/ExpectationShift.cpp
g++ -g -Og -Wall -Wextra -Weffc++ -pedantic -Wno-unused-parameter -c -o src/core/FuzzyTuple.o src/core/FuzzyTuple.cpp
g++ -g -Og -Wall -Wextra -Weffc++ -pedantic -Wno-unused-parameter -c -o src/core/FuzzyTupleFileReader.o src/core/FuzzyTupleFileReader.cpp
g++ -g -Og -Wall -Wextra -Weffc++ -pedantic -Wno-unused-parameter -c -o src/core/ModifiedPattern.o src/core/ModifiedPattern.cpp
g++ -g -Og -Wall -Wextra -Weffc++ -pedantic -Wno-unused-parameter -c -o src/core/PatternFileReader.o src/core/PatternFileReader.cpp
g++ -g -Og -Wall -Wextra -Weffc++ -pedantic -Wno-unused-parameter -c -o src/core/PresentVisitedPatternLeaf.o src/core/PresentVisitedPatternLeaf.cpp
g++ -g -Og -Wall -Wextra -Weffc++ -pedantic -Wno-unused-parameter -c -o src/core/PresentVisitedPatternTrie.o src/core/PresentVisitedPatternTrie.cpp
g++ -g -Og -Wall -Wextra -Weffc++ -pedantic -Wno-unused-parameter -c -o src/core/RankPatterns.o src/core/RankPatterns.cpp
g++ -g -Og -Wall -Wextra -Weffc++ -pedantic -Wno-unused-parameter -c -o src/core/SparseCrispTube.o src/core/SparseCrispTube.cpp
g++ -g -Og -Wall -Wextra -Weffc++ -pedantic -Wno-unused-parameter -c -o src/core/SparseFuzzyTube.o src/core/SparseFuzzyTube.cpp
g++ -g -Og -Wall -Wextra -Weffc++ -pedantic -Wno-unused-parameter -c -o src/core/SparseRoughTensor.o src/core/SparseRoughTensor.cpp
g++ -g -Og -Wall -Wextra -Weffc++ -pedantic -Wno-unused-parameter -c -o src/core/Trie.o src/core/Trie.cpp
g++ -g -Og -Wall -Wextra -Weffc++ -pedantic -Wno-unused-parameter -c -o src/core/TrieWithPrediction.o src/core/TrieWithPrediction.cpp
g++ -g -Og -Wall -Wextra -Weffc++ -pedantic -Wno-unused-parameter -c -o src/core/TubeWithPrediction.o src/core/TubeWithPrediction.cpp
g++ -g -Og -Wall -Wextra -Weffc++ -pedantic -Wno-unused-parameter -c -o src/core/TupleFileReader.o src/core/TupleFileReader.cpp
g++ -g -Og -Wall -Wextra -Weffc++ -pedantic -Wno-unused-parameter -c -o src/core/TupleWithPrediction.o src/core/TupleWithPrediction.cpp
g++ -g -Og -Wall -Wextra -Weffc++ -pedantic -Wno-unused-parameter -c -o src/core/VisitedPatternLeaf.o src/core/VisitedPatternLeaf.cpp
g++ -g -Og -Wall -Wextra -Weffc++ -pedantic -Wno-unused-parameter -c -o src/core/VisitedPatternTrie.o src/core/VisitedPatternTrie.cpp
g++ -g -Og -Wall -Wextra -Weffc++ -pedantic -Wno-unused-parameter -c -o src/core/VisitedPatterns.o src/core/VisitedPatterns.cpp
src/core/VisitedPatterns.cpp:23:17: error: ‘VisitedPatterns VisitedPatterns::presentWithNoExtension’ is not a static data member of ‘class VisitedPatterns’
   23 | VisitedPatterns VisitedPatterns::presentWithNoExtension;
      |                 ^~~~~~~~~~~~~~~
src/core/VisitedPatterns.cpp:27:6: error: no declaration matches ‘bool VisitedPatterns::isPresent() const’
   27 | bool VisitedPatterns::isPresent() const
      |      ^~~~~~~~~~~~~~~
src/core/VisitedPatterns.cpp:27:6: note: no functions named ‘bool VisitedPatterns::isPresent() const’
In file included from src/core/VisitedPatternLeaf.h:14,
                 from src/core/PresentVisitedPatternLeaf.h:14,
                 from src/core/VisitedPatterns.cpp:11:
src/core/VisitedPatterns.h:26:7: note: ‘class VisitedPatterns’ defined here
   26 | class VisitedPatterns
      |       ^~~~~~~~~~~~~~~
src/core/VisitedPatterns.cpp:32:18: error: no declaration matches ‘VisitedPatterns* VisitedPatterns::makePresent()’
   32 | VisitedPatterns* VisitedPatterns::makePresent()
      |                  ^~~~~~~~~~~~~~~
src/core/VisitedPatterns.cpp:32:18: note: no functions named ‘VisitedPatterns* VisitedPatterns::makePresent()’
In file included from src/core/VisitedPatternLeaf.h:14,
                 from src/core/PresentVisitedPatternLeaf.h:14,
                 from src/core/VisitedPatterns.cpp:11:
src/core/VisitedPatterns.h:26:7: note: ‘class VisitedPatterns’ defined here
   26 | class VisitedPatterns
      |       ^~~~~~~~~~~~~~~
src/core/VisitedPatterns.cpp:38:30: error: no declaration matches ‘std::pair<VisitedPatterns*, bool> VisitedPatterns::visited(std::vector<unsigned int>::const_iterator, std::vector<unsigned int>::const_iterator)’
   38 | pair<VisitedPatterns*, bool> VisitedPatterns::visited(const vector<unsigned int>::const_iterator flatNSetBegin, const vector<unsigned 
int>::const_iterator flatNSetEnd)
      |                              ^~~~~~~~~~~~~~~
In file included from src/core/VisitedPatternLeaf.h:14,
                 from src/core/PresentVisitedPatternLeaf.h:14,
                 from src/core/VisitedPatterns.cpp:11:
src/core/VisitedPatterns.h:32:15: note: candidate is: ‘static bool VisitedPatterns::visited(const std::vector<std::vector<unsigned int> >&)’  
   32 |   static bool visited(const vector<vector<unsigned int>>& nSet);
      |               ^~~~~~~
src/core/VisitedPatterns.h:26:7: note: ‘class VisitedPatterns’ defined here
   26 | class VisitedPatterns
      |       ^~~~~~~~~~~~~~~
src/core/VisitedPatterns.cpp:43:6: error: no declaration matches ‘void VisitedPatterns::deepDelete()’
   43 | void VisitedPatterns::deepDelete()
      |      ^~~~~~~~~~~~~~~
src/core/VisitedPatterns.cpp:43:6: note: no functions named ‘void VisitedPatterns::deepDelete()’
In file included from src/core/VisitedPatternLeaf.h:14,
                 from src/core/PresentVisitedPatternLeaf.h:14,
                 from src/core/VisitedPatterns.cpp:11:
src/core/VisitedPatterns.h:26:7: note: ‘class VisitedPatterns’ defined here
   26 | class VisitedPatterns
      |       ^~~~~~~~~~~~~~~
src/core/VisitedPatterns.cpp: In static member function ‘static bool VisitedPatterns::visited(const std::vector<std::vector<unsigned int> >&)’:
src/core/VisitedPatterns.cpp:128:94: error: no matching function for call to ‘VisitedPatterns::visited(std::vector<unsigned int>::iterator, std::vector<unsigned int>::iterator)’
  128 |       const pair<VisitedPatterns*, bool> replacementAndIsPresent = firstTuple.second->visited(flatNSet.begin(), flatNSet.end());      
      |                                                                    ~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~       
src/core/VisitedPatterns.cpp:68:6: note: candidate: ‘static bool VisitedPatterns::visited(const std::vector<std::vector<unsigned int> >&)’    
   68 | bool VisitedPatterns::visited(const vector<vector<unsigned int>>& nSet)
      |      ^~~~~~~~~~~~~~~
src/core/VisitedPatterns.cpp:68:6: note:   candidate expects 1 argument, 2 provided
src/core/VisitedPatterns.cpp:138:27: error: expected type-specifier before ‘VisitedPatternLeaf’
  138 |   firstTuple.second = new VisitedPatternLeaf(flatNSet.begin(), flatNSet.end());
      |                           ^~~~~~~~~~~~~~~~~~
make: *** [Makefile:17: src/core/VisitedPatterns.o] Error 1